<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/medi03"
    tools:context=".GastricProblem1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/textview"
        android:backgroundTint="#252324"
        android:text="Medicine Of Gastric Problem"
        android:textAllCaps="false"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ee9b00"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/textview"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:text="@string/Fluphenazine"
        android:textAllCaps="false"
        android:textColor="#170000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#c99999"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp" />

    <Button
        android:id="@+id/Gas1P1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/textview"
        android:text="@string/Doc1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="#690303"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/textview"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="10dp"
        android:text="@string/Fluphenazine1"
        android:textAllCaps="false"
        android:textColor="#170000"
        app:backgroundTint="#c99999"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="99dp" />
    <Button
        android:id="@+id/Gas1P2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/textview"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/Doc1"
        android:layout_marginTop="2dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="#690303"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp" />
    <Button

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/textview"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="10dp"
        android:text="@string/Fluphenazine2"
        android:textAllCaps="false"
        android:textColor="#170000"
        app:backgroundTint="#c99999"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="99dp" />
    <Button
        android:id="@+id/Gas1P3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/textview"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/Doc1"
        android:layout_marginTop="2dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:backgroundTint="#690303"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp" />

</LinearLayout>